# slack_cleaner2

./: .editorconfig  .gitignore  .pylintrc  AUTHORS.rst  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  requirements_dev.txt  requirements_extra.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: python.yml
docker/: Dockerfile  info.py
docs/: api.rst  conf.py  develop-install.rst  index.rst  installing.rst  requirements.txt
example/: custom_moderator.py
slack_cleaner2/: __init__.py  __main__.py  _info.py  cli.py  logger.py  model.py  predicates.py  slack_cleaner2.py  util.py
tests/: test_slack_cleaner2.py
