[bumpversion]
current_version = 3.1.1
commit = False
tag = False

[metadata]
description-file = README.md
license_file = LICENSE

[bumpversion:file:setup.py]

[bumpversion:file:slack_cleaner2/_info.py]

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[mypy-colorama.*]
ignore_missing_imports = True
