[bumpversion]
current_version = 3.2.3
commit = False
tag = False

[metadata]
description_file = README.md
license_files = LICENSE

[bumpversion:file:setup.py]

[bumpversion:file:slack_cleaner2/_info.py]

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[mypy-colorama.*]
ignore_missing_imports = True
